feat: L2 atomic transfers with real Schnorr signatures
- Updated transactionExecutor to use Supabase (async)
- Fixed signatureVerifier to accept pubkey from transaction
- Updated extension to send pubkey with transactions
- Fixed gas fee display (1 KRAY for transfers)
- Integer amounts only (1:1 mapping with L1)

--- a/extension-prod/popup/popup.html
+++ b/extension-prod/popup/popup.html
@@ -1552,15 +1552,15 @@
         <!-- Amount -->
         <div class="form-group">
             <label>Amount (KRAY)</label>
-            <input type="number" id="l2-transfer-amount" class="input-field" placeholder="0.000" step="0.001" min="0.001" />
-            <span class="helper-text">Minimum: 0.001 KRAY (1 credit)</span>
+            <input type="number" id="l2-transfer-amount" class="input-field" placeholder="100" step="1" min="1" />
+            <span class="helper-text">Minimum: 1 KRAY (integer only)</span>
         </div>
 
         <!-- Gas Fee -->
         <div style="background: var(--color-bg-secondary); border: 1px solid var(--color-border); border-radius: 10px; padding: 14px; margin-bottom: 20px;">
             <div style="display: flex; justify-content: space-between; align-items: center;">
                 <div style="font-size: 12px; color: var(--color-text-secondary);">Gas Fee</div>
-                <div style="font-size: 14px; font-weight: 600; color: #10b981;">0.001 KRAY</div>
+                <div style="font-size: 14px; font-weight: 600; color: #10b981;">1 KRAY</div>
             </div>
             <div style="font-size: 10px; color: var(--color-text-tertiary); margin-top: 4px;">
                 50% burned • 50% to validators
