--- a/extension-prod/popup/popup.html
+++ b/extension-prod/popup/popup.html
@@ -1560,10 +1560,10 @@
         <div style="background: var(--color-bg-secondary); border: 1px solid var(--color-border); border-radius: 10px; padding: 14px; margin-bottom: 20px;">
             <div style="display: flex; justify-content: space-between; align-items: center;">
                 <div style="font-size: 12px; color: var(--color-text-secondary);">Gas Fee</div>
-                <div style="font-size: 14px; font-weight: 600; color: #10b981;">1 KRAY</div>
+                <div style="font-size: 14px; font-weight: 600; color: #10b981;">FREE ⚡</div>
             </div>
             <div style="font-size: 10px; color: var(--color-text-tertiary); margin-top: 4px;">
-                50% burned • 50% to validators
+                Instant transfers are free on KRAY L2!
             </div>
         </div>
 
