Add ▽ symbol for KRAY amounts in wallet

--- a/extension-prod/popup/popup.html
+++ b/extension-prod/popup/popup.html
@@ -1681,7 +1681,7 @@
             <div style="background: var(--color-bg-secondary); border: 1px solid rgba(16, 185, 129, 0.3); border-radius: 12px; padding: 20px; margin-bottom: 20px;">
                 <div style="text-align: center; margin-bottom: 16px;">
                     <div style="font-size: 32px; margin-bottom: 8px;">⚡</div>
-                    <div style="font-size: 24px; font-weight: 700; color: #10b981;" id="l2-confirm-amount">0 KRAY</div>
+                    <div style="font-size: 24px; font-weight: 700; color: #10b981;" id="l2-confirm-amount">0 ▽</div>
                     <div style="font-size: 12px; color: var(--color-text-secondary); margin-top: 4px;">Instant L2 Transfer</div>
                 </div>
                 
@@ -1900,7 +1900,7 @@
             <div style="font-size: 11px; color: var(--color-text-secondary); margin-bottom: 10px; font-weight: 600;">📋 Summary</div>
             <div style="display: flex; justify-content: space-between; margin-bottom: 6px;">
                 <span style="font-size: 11px; color: var(--color-text-secondary);">You withdraw</span>
-                <span id="l2-withdraw-amount-display" style="font-size: 12px; color: #ffffff; font-weight: 600;">0 KRAY</span>
+                <span id="l2-withdraw-amount-display" style="font-size: 12px; color: #ffffff; font-weight: 600;">0 ▽</span>
             </div>
             <div style="display: flex; justify-content: space-between; margin-bottom: 6px;">
                 <span style="font-size: 11px; color: var(--color-text-secondary);">L2 Fee</span>
@@ -1912,7 +1912,7 @@
             </div>
             <div style="border-top: 1px solid var(--color-border); margin: 8px 0; padding-top: 8px; display: flex; justify-content: space-between;">
                 <span style="font-size: 12px; color: #ffffff; font-weight: 600;">You receive on L1</span>
-                <span id="l2-withdraw-receive" style="font-size: 14px; color: #10b981; font-weight: 700;">0 KRAY</span>
+                <span id="l2-withdraw-receive" style="font-size: 14px; color: #10b981; font-weight: 700;">0 ▽</span>
             </div>
         </div>
 
@@ -1991,7 +1991,7 @@
             </div>
             <div style="border-top: 1px solid var(--color-border); margin-top: 8px; padding-top: 8px; display: flex; justify-content: space-between;">
                 <span style="font-size: 12px; color: #10b981; font-weight: 600;">You receive on L1</span>
-                <span id="l2-withdraw-confirm-receive" style="font-size: 14px; color: #10b981; font-weight: 700;">0 KRAY</span>
+                <span id="l2-withdraw-confirm-receive" style="font-size: 14px; color: #10b981; font-weight: 700;">0 ▽</span>
             </div>
         </div>
 
