🌟 Add Sat Rarity detection across entire ecosystem
- Created satRarity.js for browser-side rarity detection
- Added sat rarity badges to KrayScan inscription cards
- Added sat rarity badges to KrayWallet extension Ordinals tab
- Added sat rarity indicators to UTXOs with inscriptions
- Updated wallet-inscriptions API to return sat numbers
- Supports all rarity types: Mythic, Legendary, Epic, Rare, Uncommon, Palindrome, Vintage, Block 9, Nakamoto

--- a/extension-prod/popup/popup.html
+++ b/extension-prod/popup/popup.html
@@ -399,9 +399,9 @@
                     <div style="font-size: 11px; color: var(--color-text-secondary); margin-bottom: 10px;">Your Tokens</div>
                     <div style="display: grid; gap: 8px;">
                         <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <span style="font-size: 13px; color: #888;">⚡ KRAY</span>
+                            <span style="font-size: 13px; color: #888; display: flex; align-items: center; gap: 6px;"><img src="../assets/icon-48.png" style="width: 18px; height: 18px; border-radius: 50%;"> KRAY</span>
                             <div style="text-align: right;">
-                                <div id="l2-balance-kray" style="font-size: 18px; font-weight: 700; color: #ffffff;">0.000</div>
+                                <div id="l2-balance-kray" style="font-size: 18px; font-weight: 700; color: #ffffff;">0 <span style="color: #f59e0b;">▽</span></div>
                                 <div style="font-size: 10px; color: #666;">Gas Token</div>
                             </div>
                         </div>
@@ -2042,5 +2042,6 @@
     <script src="TEST_VERSION.js"></script>
     <script src="krayL2.js"></script>
     <script src="popup.js"></script>
+<script src="satRarity.js"></script>
 </body>
 </html>
