disable: Download Extension buttons - Coming Soon (testing phase)

--- a/kray-vercel/index.html
+++ b/kray-vercel/index.html
@@ -254,20 +254,21 @@
                 
                 <div class="kraywallet-download">
                     <div class="download-buttons">
-                        <a href="kraywallet-extension" class="btn-download chrome">
+                        <!-- DISABLED: Em teste - não liberar para download público -->
+                        <span class="btn-download chrome" style="opacity: 0.6; cursor: not-allowed; pointer-events: none;">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                                 <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
                                 <path d="M12 8V16M8 12H16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                             </svg>
                             <div>
-                                <span class="download-label">Download Extension</span>
+                                <span class="download-label">Coming Soon</span>
                                 <span class="download-browser">Chrome · Brave · Edge</span>
                             </div>
-                        </a>
+                        </span>
                     </div>
 
                     <p class="download-note">
-                        💡 Load unpacked → chrome://extensions → Enable "Developer mode"
+                        ⏳ Extension in testing phase
                     </p>
                 </div>
             </div>
