--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@
             <h2 style="margin-bottom: 20px;">Download KrayWallet</h2>
             <p style="margin-bottom: 30px; opacity: 0.8;">Secure Bitcoin wallet with Ordinals & Runes support</p>
             
-            <a href="https://github.com/tomkray/kraywallet-extension/releases/latest" class="download-btn">
-                ⬇️ Download Extension
-            </a>
+            <!-- DISABLED: Em teste - não liberar para download público -->
+            <span class="download-btn" style="opacity: 0.6; cursor: not-allowed; pointer-events: none;">
+                ⏳ Coming Soon
+            </span>
             
             <div class="extension-badge">
                 ✅ Chrome Extension • Secure • Open Source
